# aoc-2024

./: .gitignore  aoc2024.opam  dune  dune-project
lib/: dune  util.ml
lib/solutions/: day1.ml  day2.ml  day3.ml  day4.ml  dune
test/: dune  test_day1.ml  test_day2.ml  test_day3.ml  test_day4.ml
